--- a/style/main.css
+++ b/style/main.css
@@ -10,6 +10,34 @@ body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
 
+#home{
+  display: none;
+}
+
+#app{
+  display: none;
+}
+
+#loading{
+   width: 100%;
+   height: 100%;
+   top: 0;
+   left: 0;
+   position: fixed;
+   display: block;
+   opacity: 1;
+   background-color: black;
+   z-index: 10;
+   text-align: center;
+}
+
+#load-img{
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 280px;
+}
+
 #video-container{
   position: absolute;
   top: 0;
@@ -122,6 +150,4 @@ header.masthead p {
   box-shadow: 0 0 0 0.2rem rgba(240, 95, 64, 0.5) !important;
 }
 
-#app{
-  display: none;
-}
+
