--- a/style/main.css
+++ b/style/main.css
@@ -223,9 +223,10 @@ header.masthead p {
 }
 
 .modal-box{
-    width: 400px;
+    max-height: 400px;
+    width: 1200px;
     position: absolute;
-    top: 30%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     padding: 2em;
@@ -236,6 +237,34 @@ header.masthead p {
 }
 
 .modal-close{
+  font-size: 22px;
+  font-weight: 700;
   cursor: pointer;
   padding: 5px;
 }
+
+.modal-close:hover{
+  color: red;
+}
+
+.notation{
+  width: 300px;
+  float: left;
+  box-sizing:border-box;
+  font-size: 14px;
+}
+
+.hit-level, .damage, .on-block, .on-ch, .on-hit{
+  width: 150px;
+  float: left;
+  box-sizing:border-box;
+  font-size: 14px;
+
+}
+
+
+
+
+
+
+
