--- a/style/main.css
+++ b/style/main.css
@@ -240,11 +240,15 @@ header.masthead p {
   font-size: 22px;
   font-weight: 700;
   cursor: pointer;
-  padding: 5px;
+  background-color: #d0011b;
+  color: white;
+  border-radius: 10px;
+  padding: 10px 20px;
 }
 
 .modal-close:hover{
-  color: red;
+  background-color: #780110;
+  box-shadow: 2px 1px #780110;
 }
 
 .notation{
