--- a/style/main.css
+++ b/style/main.css
@@ -98,22 +98,88 @@ header.masthead p {
   font-weight: 300;
 }
 
-@media (min-width: 768px) {
+@media (min-width: 768px) and (max-width: 991px) {
   header.masthead p {
     font-size: 1.15rem;
   }
+
+  .modal-box{
+    min-width: 730px;
+    max-height: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2em;
+    background: #ffffff;
+    color: #333333;
+    overflow-x: hidden;
+    overflow-y: auto;
+    white-space:nowrap
+}
+
+.notation{
+  min-width: 160px;
+  float: left;
+  box-sizing:border-box;
+  font-size: 12px;
+  overflow: hidden;
+}
+
+.hit-level, .damage, .on-block, .on-ch, .on-hit{
+  min-width: 90px;
+  float: left;
+  box-sizing:border-box;
+  font-size: 12px;
+  overflow: hidden;
+
+}
+
+
   #appList li{
   width: 50%;
 }
 }
 
-@media (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1199px) {
   header.masthead {
     height: 100vh;
     min-height: 650px;
     padding-top: 0;
     padding-bottom: 0;
   }
+  .modal-box{
+    min-width: 950px;
+    max-height: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2em;
+    background: #ffffff;
+    color: #333333;
+    overflow-x: hidden;
+    overflow-y: auto;
+    white-space:nowrap
+}
+
+.notation{
+  min-width: 200px;
+  float: left;
+  box-sizing:border-box;
+  font-size: 12px;
+  overflow: hidden;
+}
+
+.hit-level, .damage, .on-block, .on-ch, .on-hit{
+  min-width: 100px;
+  float: left;
+  box-sizing:border-box;
+  font-size: 12px;
+  overflow: hidden;
+
+}
+
   header.masthead h1 {
     font-size: 3rem;
   }
@@ -128,6 +194,39 @@ header.masthead p {
   header.masthead h1 {
     font-size: 4rem;
   }
+   .modal-box{
+    min-width: 1180px;
+    max-height: 400px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 2em;
+    background: #ffffff;
+    color: #333333;
+    overflow-x: hidden;
+    overflow-y: auto;
+    white-space:nowrap
+}
+
+
+.notation{
+  min-width: 300px;
+  float: left;
+  box-sizing:border-box;
+  font-size: 12px;
+  overflow: hidden;
+}
+
+.hit-level, .damage, .on-block, .on-ch, .on-hit{
+  min-width: 150px;
+  float: left;
+  box-sizing:border-box;
+  font-size: 12px;
+  overflow: hidden;
+
+}
+
   #appList .appChar{
   width: 60%;
 }
@@ -215,10 +314,9 @@ header.masthead p {
    z-index: 20;
 
 }
-
+/*
 .modal-box{
     max-height: 400px;
-    width: 1200px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -226,9 +324,10 @@ header.masthead p {
     padding: 2em;
     background: #ffffff;
     color: #333333;
-    overflow: scroll;
+    overflow-x: hidden;
+    overflow-y: auto;
     white-space:nowrap
-}
+}*/
 
 .modal-close{
   font-size: 22px;
@@ -245,21 +344,61 @@ header.masthead p {
   box-shadow: 2px 1px #780110;
 }
 
-.notation{
-  width: 300px;
+/*.notation{
+  width: 200px;
   float: left;
   box-sizing:border-box;
-  font-size: 14px;
+  font-size: 12px;
   overflow: hidden;
 }
 
 .hit-level, .damage, .on-block, .on-ch, .on-hit{
-  width: 150px;
+  width: 100px;
   float: left;
   box-sizing:border-box;
-  font-size: 14px;
+  font-size: 12px;
   overflow: hidden;
 
+}*/
+
+.appChar h4{
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.previous{
+    border: 4px solid black;
+    background-color: black;
+    z-index: 10;
+    position: fixed;
+    margin-left: 20px;
+    border-radius: 10px;
+    padding: 2px;
+    color: white;
+}
+
+.previous:hover{
+    cursor: pointer;
+    background-color: black;
+    border-color: black;
+}
+
+.scroll{
+    display: none;
+    border: 4px solid black;
+    background-color: black;
+    z-index: 10;
+    position: fixed;
+    margin-left: 20px;
+    top: 10em;
+    border-radius: 10px;
+    padding: 2px;
+    color: white;
+}
+.scroll:hover{
+    cursor: pointer;
+    background-color: black;
+    border-color: black;
 }
 
 
