--- a/style/main.css
+++ b/style/main.css
@@ -146,6 +146,38 @@ header.masthead p {
   border: 4px solid black;
 }
 
+.gifBtn{
+  width: 20%;
+  float: left;
+  font-size: 7px;
+  margin-bottom: 4px;
+  font-weight: 700;
+  position: relative;
+  top: 28em;
+  overflow: hidden;
+}
+
+.gifBtn button{
+  background-color: #E5E2C3;
+  border-color: #E5E2C3;
+  padding: 2px;
+  color: black;
+  border-radius: 5px;
+}
+
+.gifContainer{
+  width: 90%;
+  height: 250px; 
+  z-index: -10;
+  margin-bottom: 14px;
+  border: 2px solid black;
+  border-radius: 4px;
+  background-color: black;
+  position: absolute;
+  top: 0
+}
+
+
 }
 @media (min-width: 577px) and (max-width: 650px) {
   .modal-box{
@@ -500,6 +532,12 @@ header.masthead p {
     border-radius: 10px;
     padding: 2px;
     color: white;
+    
+    -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
+       -moz-animation: fadein 2s; /* Firefox < 16 */
+        -ms-animation: fadein 2s; /* Internet Explorer */
+         -o-animation: fadein 2s; /* Opera < 12.1 */
+            animation: fadein 2s;
 }
 .scroll:hover{
     cursor: pointer;
@@ -547,4 +585,33 @@ header.masthead p {
   border: 2px solid black;
   border-radius: 4px;
   background-color: black;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from { opacity: 0; }
+    to   { opacity: 1; }
 }
